--- a/ckanext/cioos_theme/templates/package/read.html
+++ b/ckanext/cioos_theme/templates/package/read.html
@@ -59,8 +59,13 @@
 
   {% endblock %}
 
+  
   {% block metadata_quality_statment %}
-      {% snippet "package/snippets/metadata_quality.html", pkg_dict=pkg %}
+      {% set harvest_source_quality_level = h.get_pkg_dict_extra(c.pkg_dict, 'harvest_source_quality_level') %}
+      {% if harvest_source_quality_level is defined and harvest_source_quality_level in ('unknown','external') %}
+        {% snippet "package/snippets/metadata_quality.html", pkg_dict=pkg %}
+      {% endif %}
+
   {% endblock %}
 
   {% block package_access %}
