--- a/ckanext/cioos_theme/templates/menu/pacific_menu_list.html
+++ b/ckanext/cioos_theme/templates/menu/pacific_menu_list.html
@@ -34,13 +34,13 @@
       <a href="https://cioospacific.ca/data-tools/"><span class="mega-indicator">DATA TOOLS</span></a>
     </li>
     <li class="menu-item menu-item-has-children menu-parent">
-      <a href="https://catalogue.cioospacific.ca/"><span class="mega-indicator">DATA CATALOGUE</span></a>
+      <a href="/"><span class="mega-indicator">DATA CATALOGUE</span></a>
       <ul class="sub-menu">
         <li class="menu-item">
-          <a href="https://catalogue.cioospacific.ca/dataset"><span class="mega-indicator">Datasets</span></a>
+          <a href="/dataset"><span class="mega-indicator">Datasets</span></a>
         </li>
         <li class="menu-item">
-          <a href="https://catalogue.cioospacific.ca/organization"><span class="mega-indicator">Organizations</span></a>
+          <a href="/resorg/"><span class="mega-indicator">Responsible Organizations</span></a>
         </li>
       </ul>
     </li>
@@ -80,13 +80,13 @@
       <a href="https://cioospacific.ca/fr/outils-de-donnees/"><span class="mega-indicator">OUTILS DE DONNÉES</span></a>
     </li>
     <li class="menu-item menu-item-has-children menu-parent">
-      <a href="https://catalogue.cioospacific.ca/fr/"><span class="mega-indicator">CATALOGUE DE DONNÉES</span></a>
+      <a href="/fr/"><span class="mega-indicator">CATALOGUE DE DONNÉES</span></a>
       <ul class="sub-menu">
         <li class="menu-item">
-          <a href="https://catalogue.cioospacific.ca/fr/dataset"><span class="mega-indicator">Ensembles de données</span></a>
+          <a href="/fr/dataset"><span class="mega-indicator">Ensembles de données</span></a>
         </li>
         <li class="menu-item">
-          <a href="https://catalogue.cioospacific.ca/fr/organization"><span class="mega-indicator">Organisations</span></a>
+          <a href="/fr/resorg"><span class="mega-indicator">Organisations Responsable</span></a>
         </li>
       </ul>
     </li>
