--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -566,7 +566,7 @@ body {
 
 .btn {
   display: inline-block;
-  text-transform: uppercase;
+  //text-transform: uppercase;
   margin-bottom: 0;
   font-family: $defaultfont;
   font-weight: normal;
@@ -1308,6 +1308,16 @@ div.search-input-group {
     border-radius: 0;
   }
 
+  .module-content h1.heading a {
+    color: inherit;
+  }
+
+  .module-content h1.title {
+    color: inherit;
+    margin-bottom: 0px;
+    line-height: 1;
+  }
+
 }
 
 .notes {
@@ -1334,6 +1344,23 @@ section{
     font-family: 'FontAwesome';
     content: '\f146';
   }
+
+  a.section_hide_controle_full_width{
+    display:inline-block;
+    width:100%;
+    height:100%;
+    padding: 10px 15px;
+  }
+
+  a.section_hide_controle_full_width i{
+    float:right;
+    padding-top:3px;
+  }
+
+  .panel-heading-thin{
+    padding: unset;
+  }
+
 }
 
 .table.collapse.in {
