update menu links for responable organization

--- a/ckanext/cioos_theme/templates/menu/atlantic_menu_list.html
+++ b/ckanext/cioos_theme/templates/menu/atlantic_menu_list.html
@@ -37,7 +37,7 @@
 <li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent current-menu-item current_page_item"><a href="{{ h.url_for('home.index') }}"><span>Data Catalogue</span></a>
   <ul class="sub-menu">
     <li id="menu-item-1999" class="menu-item"><a href="{{ h.url_for('home.index') }}dataset">Datasets</a></li>
-    <li id="menu-item-2001" class="menu-item"><a href="{{ h.url_for('home.index') }}organization">Organizations</a></li>
+    <li id="menu-item-2001" class="menu-item"><a href="{{ h.url_for('home.index') }}resorg">Responsible Organizations</a></li>
   </ul>
 </li>
 <li id="menu-item-2002" class="menu-item menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}resources/"><span>Resources</span></a>
@@ -58,7 +58,7 @@
 <li id="menu-item-1652" class="menu-item menu-item-has-children menu-parent current-menu-item current_page_item"><a href="{{ h.url_for('home.index') }}"><span>Catalogue de Données</span></a>
   <ul class="sub-menu">
     <li id="menu-item-1999" class="menu-item"><a href="{{ h.url_for('home.index') }}dataset">Jeux de données</a></li>
-    <li id="menu-item-2001" class="menu-item"><a href="{{ h.url_for('home.index') }}organization">Organisations</a></li>
+    <li id="menu-item-2001" class="menu-item"><a href="{{ h.url_for('home.index') }}resorg">Organisations Responsable</a></li>
   </ul>
 </li>
 <li id="menu-item-2002" class="menu-item menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}fr/ressources/"><span>Ressources</span></a>
