--- a/ckanext/cioos_theme/templates/menu/pacific_dev_menu_list.html
+++ b/ckanext/cioos_theme/templates/menu/pacific_dev_menu_list.html
@@ -40,7 +40,7 @@
           <a href="https://catalogue.pac-dev1.cioos.org/dataset"><span class="mega-indicator">Datasets</span></a>
         </li>
         <li class="menu-item">
-          <a href="https://catalogue.pac-dev1.cioos.org/organization"><span class="mega-indicator">Organizations</span></a>
+          <a href="https://catalogue.pac-dev1.cioos.org/resorg"><span class="mega-indicator">Responsible Organization</span></a>
         </li>
       </ul>
     </li>
@@ -86,7 +86,7 @@
           <a href="https://catalogue.pac-dev1.cioos.org/fr/dataset"><span class="mega-indicator">Ensembles de données</span></a>
         </li>
         <li class="menu-item">
-          <a href="https://catalogue.pac-dev1.cioos.org/fr/organization"><span class="mega-indicator">Organisations</span></a>
+          <a href="https://catalogue.pac-dev1.cioos.org/resorg"><span class="mega-indicator">Organisation Responsable</span></a>
         </li>
       </ul>
     </li>
