--- a/ckanext/cioos_theme/templates/group/snippets/group_item.html
+++ b/ckanext/cioos_theme/templates/group/snippets/group_item.html
@@ -17,7 +17,7 @@ Example:
 <li class="media-item">
   {% block item_inner %}
   {% block image %}
-    <img src="{{ group.image_display_url or h.get_translated(group, 'image_url') or h.url_for_static('/base/images/placeholder-group.png') }}" alt="{{ group.name }}" class="media-image img-responsive">
+    {# <img src="{{ group.image_display_url or h.get_translated(group, 'image_url') or h.url_for_static('/base/images/placeholder-group.png') }}" alt="{{ group.name }}" class="media-image img-responsive"> #}
   {% endblock %}
   {% block title %}
     <h2 class="media-heading">{{ h.get_translated(group, 'title')}}</h2>
