--- a/ckanext/cioos_theme/templates/home/layout4.html
+++ b/ckanext/cioos_theme/templates/home/layout4.html
@@ -22,7 +22,7 @@
           {% for grouper, list in eov|rejectattr('category', 'undefined')|groupby('category') %}
           {% if grouper and grouper not in g.exclude_eov_category %}
           <h4>{{ _(grouper) }}</h4>
-          <ul class="media-grid" data-module="media-grid">
+          <ul class="media-grid">
             {% for item in list|sort(attribute='name') %}
             {% if item.name not in g.exclude_eov %}
             {% set href = h.url_for(controller='dataset', action='search', eov=item.name) %}
@@ -33,11 +33,10 @@
             {% set icon_base = g.eov_icon_base_path or '/base/images/eov-icons-svg/' %}
             {% set img_url = item.image_display_url or h.url_for_static(icon_base + item.get('icon')) %}
             <li class="media-item {{ 'media-item-disabled' if count|trim == '0'}}">
-              <a class="media-image" href="{{ href }}" title="{{ label if label != label_truncated else '' }}">
+              <a class="media-link" href="{{ href }}" title="{{ label if label != label_truncated else '' }}">
                 <img src="{{ img_url }}" alt="{{ item.name }}" class="media-image img-responsive">
-                <span class="media-heading">{{ label_truncated }}</span>
-                <span class="hidden separator"> - </span>
-                <span class="item-count badge">{{ count }}</span>
+                <div class="media-heading">{{ label_truncated }}</div>
+                <div class="item-count badge">{{ count }}</div>
               </a>
             </li>
             {% endif %}
