--- a/ckanext/cioos_theme/templates/header.html
+++ b/ckanext/cioos_theme/templates/header.html
@@ -30,7 +30,7 @@
           {% block header_site_navigation_tabs %}
           {{ h.build_nav_main(
           ('dataset.search', _('Datasets')),
-          ('organization.index', _('Organizations')),
+          ('resorg.index', _('Responsible Organizations')),
           ('home.about', _('About')) ) }}
           {% endblock %}
         </ul>
