update css for dataset titles on search page

--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -1261,6 +1261,9 @@ div.search-input-group {
   .dataset-list .dataset-content .identifier_icon_list{
     max-height: 16px;
   }
+  .dataset-heading a{
+    font-weight: 700;
+  }
   .media-grid .identifier_icon_list{
     max-height: 16px;
   }
