--- a/ckanext/cioos_theme/templates/home/layout3.html
+++ b/ckanext/cioos_theme/templates/home/layout3.html
@@ -58,9 +58,13 @@
     <div class="row">
       <h3 class="heading">{{ _("Search by Location") }}</h3>
       <p> To perform a spatial search, define your search area using the draw tool</p>
-      <div class="box">
-        {% snippet "spatial/snippets/spatial_query.html" , default_extent= h.spatial_default_extent(), dataset_extents= h.cioos_get_dataset_extents(q=None, fields=[], bbox_values=None, output='json')%}
-      </div>
+    <div class="box">
+  	  {% snippet "spatial/snippets/spatial_query.html" , 
+        default_extent= h.spatial_default_extent(),
+        dataset_extents= h.cioos_get_dataset_extents(q=c.get('q'), fields=c.fields, bbox_values=dict(request.params).get('ext_bbox'), output='json'),
+        ra_extents=h.cioos_get_ra_extents()
+       %}
+  	</div>
     </div>
   </div>
 </div>
