improve page load time by removeding redundent or duplicate package_search and package_show requests. also limit payload size returned to dataset search nad dataset read page

--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -1503,4 +1503,8 @@ section{
   word-break: break-all;
 }
 
+#flDebug, #flDebug * {
+overflow-y: auto;
+}
+
 @import url(//fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900|Quicksand:300,400,600,700|PT+Sans:400|Raleway:300,400,600,700);
