--- a/ckanext/cioos_theme/templates/home/layout4.html
+++ b/ckanext/cioos_theme/templates/home/layout4.html
@@ -22,7 +22,7 @@
           {% for grouper, list in eov|rejectattr('category', 'undefined')|groupby('category') %}
           {% if grouper and grouper not in g.exclude_eov_category %}
           <h4>{{ _(grouper) }}</h4>
-          <ul class="media-grid" data-module="media-grid">
+          <ul class="media-grid">
             {% for item in list|sort(attribute='name') %}
             {% if item.name not in g.exclude_eov %}
             {% set href = h.url_for(controller='dataset', action='search', eov=item.name) %}
@@ -35,9 +35,8 @@
             <li class="media-item {{ 'media-item-disabled' if count|trim == '0'}}">
               <a class="media-image" href="{{ href }}" title="{{ label if label != label_truncated else '' }}">
                 <img rel="preload" as="image" type="image/svg+xml" src="{{ img_url }}" alt="{{ item.name }}" class="media-image img-responsive">
-                <span class="media-heading">{{ label_truncated }}</span>
-                <span class="hidden separator"> - </span>
-                <span class="item-count badge">{{ count }}</span>
+                <div class="media-heading">{{ label_truncated }}</div>
+                <div class="item-count badge">{{ count }}</div>
               </a>
             </li>
             {% endif %}
