fix date display format

--- a/ckanext/cioos_theme/templates/package/snippets/dates.html
+++ b/ckanext/cioos_theme/templates/package/snippets/dates.html
@@ -38,7 +38,7 @@
             <td class="dataset-details">
               {% for d in h.cioos_load_json(metadata_reference_date) %}
                 {% if d['value']| length == 10 %}
-                  {{ h.render_datetime(d['value'], 'MMMM dd, YYYY') }} ({{_(d.get('type','').title())}})</br>
+                  {{ h.render_datetime(d['value'], date_format='%B %d, %Y') }} ({{_(d.get('type','').title())}})</br>
                 {% else %}
                   {% snippet 'snippets/local_friendly_datetime.html',
                       datetime_obj=d['value'] %} ({{_(d.get('type','').title())}})</br>
@@ -55,7 +55,7 @@
               <th scope="row" class="dataset-label">{{ _("Temporal Extent Begin") }}</th>
               <td class="dataset-details">
                 {% if te.begin | length == 10 %}
-                  {{ h.render_datetime(te.begin, 'MMMM dd, YYYY') }}
+                  {{ h.render_datetime(te.begin, date_format='%B %d, %Y') }}
                 {% else %}
                   {% snippet 'snippets/local_friendly_datetime.html', datetime_obj=te.begin %}
                 {% endif %}
@@ -68,7 +68,7 @@
               <th scope="row" class="dataset-label">{{ _("Temporal Extent End") }}</th>
               <td class="dataset-details">
                 {% if te.end | length == 10 %}
-                  {{ h.render_datetime(te.end, 'MMMM dd, YYYY') }}
+                  {{ h.render_datetime(te.end, date_format='%B %d, %Y') }}
                 {% else %}
                   {% snippet 'snippets/local_friendly_datetime.html', datetime_obj=te.end %}
                 {% endif %}
@@ -83,7 +83,7 @@
             <td class="dataset-details">
               {% for d in h.cioos_load_json(dataset_reference_date) %}
                 {% if d['value']| length == 10 %}
-                  {{ h.render_datetime(d['value'], 'MMMM dd, YYYY') }} ({{_(d.get('type','').title())}})</br>
+                  {{ h.render_datetime(d['value'], date_format='%B %d, %Y') }} ({{_(d.get('type','').title())}})</br>
                 {% else %}
                   {% snippet 'snippets/local_friendly_datetime.html', datetime_obj=d['value'] %}
                     ({{_(d.get('type','').title())}})</br>
