--- a/ckanext/cioos_theme/templates/package/read_base.html
+++ b/ckanext/cioos_theme/templates/package/read_base.html
@@ -20,6 +20,7 @@
 {% block content_primary_nav %}
   {{ h.build_nav_icon(dataset_type ~ '.read', _('Dataset'), id=pkg.name) }}
   {{ h.build_nav_icon('cioos.resorg', _('Responsible Organizations'), package_type=dataset_type, id=pkg.id if is_activity_archive else pkg.name, icon='users') }}
+  {{ h.build_nav_icon('cioos.lineage', _('Lineage'), package_type=dataset_type, id=pkg.id if is_activity_archive else pkg.name, icon='book') }}
   {{ h.build_nav_icon(dataset_type ~ '.activity', _('Activity Stream'), id=pkg.name) }}
 {% endblock %}
 
@@ -146,8 +147,10 @@
     #}
       {% if h.cioos_helper_available('structured_data') %}
           <script type="application/ld+json">
-           {{ h.structured_data(pkg.id, profiles=['schemaorg','cioos_dcat'])|safe }}
+           {{ h.cioos_structured_data(pkg)|safe }}
           </script>
       {% endif %}
+
+
   {% endblock %}
 {% endblock %}
