update css to make 3 column layout for eov's work

--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -40,6 +40,7 @@ $teenwidth: 100%;
     display: unset;
     width: 75px;
     height: 75px;
+    min-width: unset;
 }
 
 .media-item  .item-count {
