--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -579,7 +579,7 @@ body {
   color: #404041;
   background-color: #C6E3DF;
   border-color: #C6E3DF;
-  padding: 0 30px 10px !important;
+  padding: 8px 30px !important;
   margin: 0 30px;
 }
 
