--- a/ckanext/cioos_theme/templates/package/read_base.html
+++ b/ckanext/cioos_theme/templates/package/read_base.html
@@ -70,7 +70,7 @@
     {% endblock %}
   {% endif %}
   
-  {% if h.config.get('ckan.show_harvested_from_in_dataset_sidebar', 'true').lower() == 'true' %}
+  {% if g.show_harvested_from_in_dataset_sidebar.lower()|default('', 'true') == 'true' %}
   {% block harvest_source %}
   {% set organization = h.cioos_load_json(h.cioos_get_extra_value('harvest_source_organization', pkg)) %}
   {% set source_id = pkg.extras | selectattr("key","equalto","harvest_source_id") | map(attribute="value") | join('') %}
@@ -115,8 +115,6 @@
 
   {% endblock %}
   {% endif %}
-
-  {# License #}
 
   {% block package_license %}
     {% if pkg.license_id %}
