--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -102,18 +102,11 @@ $teenwidth: 100%;
     // small circular count badge pinned bottom-left
     .item-count {
       position: absolute;
-      left: 10px;
-      bottom: 10px;
-      margin: 0 !important;
-      float: none !important;
+      padding: 7px;
       background: #bdbdbd;
       color: #fff;
-      border-radius: 999px;
-      width: 22px;
-      height: 22px;
       font-size: 12px;
-      line-height: 22px;
-      text-align: center;
+      border-radius: 33px;
     }
   }
 
