--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -102,11 +102,18 @@ $teenwidth: 100%;
     // small circular count badge pinned bottom-left
     .item-count {
       position: absolute;
-      padding: 7px;
+      padding: 0;
       background: #bdbdbd;
       color: #fff;
       font-size: 12px;
-      border-radius: 33px;
+      border-radius: 50%;
+      width: 24px;
+      height: 24px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      min-width: 24px;
+      line-height: 1;
     }
   }
 
